# Rusted

./: .gitignore  Cargo.toml  main.rs
src/: main.rs
