[package]
name = "Rusted"
version = "0.1.0"
edition = "2021"
authors = ["AcidBrother<---------@gmail.com>"]
description = "project for traning"
license = "Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rusted"
path = "src/main.rs"

[dependencies]

